# Multi_Agent_Langgraph

./: .gitignore  API_KEY_FIX.md  LANGSMITH_INFO.md  LICENSE  README.md  REQUIRED_KEYS_SUMMARY.md  SETUP_REQUIREMENTS.md  langgraph.json  pyproject.toml
examples/: use_cases.md
src/backend/: .env.example  app.py  config.py  exceptions.py  routes.py  schemas.py
src/backend/agents/knowledge/: __init__.py  graph.py  prompts.py  schemas.py  tools.py
src/backend/agents/orchestrator/: graph.py  prompts.py  schemas.py
src/backend/agents/summarizer/: __init__.py  graph.py  prompts.py  schemas.py  tools.py
src/backend/utils/: __init__.py  document_ingestion.py  file_utils.py  message_utils.py
src/static/: index.html
src/static/js/: script.js
src/static/js/config/: config.js
src/static/styles/: main.css
